Change text in banner and header

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
-<!-- Banner -->		
+<!-- Banner -->
 <section id="banner">
 
     <!--
@@ -10,16 +10,15 @@
     <div class="inner">
 
         <header>
-            <h2>TWENTY</h2>
+            <h2>WELCOME</h2>
         </header>
-        <p>This is <strong>Twenty</strong>, a free
+        <p>You've landed at Rohan Nagar's
         <br />
-        responsive template
-        <br />
-        by <a href="http://html5up.net">HTML5 UP</a>.</p>
+        blog and personal webpage.
+        <br /> Enjoy your stay.</p>
         <footer>
             <ul class="buttons vertical">
-                <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+                <li><a href="#main" class="button fit scrolly">Explore</a></li>
             </ul>
         </footer>
 
