Add external links in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,15 @@
 <footer id="footer">
 
     <ul class="icons">
-        <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-        <li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-        <li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+        <li><a href="https://twitter.com/RohanNagar22" class="icon circle fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+        <li><a href="https://www.facebook.com/rnagar" class="icon circle fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
+        <li><a href="https://plus.google.com/u/0/+RohanNagar22/posts" class="icon circle fa-google-plus" target="_blank"><span class="label">Google+</span></a></li>
+        <li><a href="https://github.com/RohanNagar" class="icon circle fa-github" target="_blank"><span class="label">Github</span></a></li>
+        <li><a href="https://www.linkedin.com/in/rohannagar" class="icon circle fa-linkedin" target="_blank"><span class="label">Dribbble</span></a></li>
     </ul>
 
     <ul class="copyright">
-        <li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+        <li>&copy; 2015. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
     </ul>
 
 </footer>
