Change wording in banner

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -14,8 +14,7 @@
         </header>
         <p>You've landed at Rohan Nagar's
         <br />
-        blog and personal webpage.
-        <br /> Enjoy your stay.</p>
+        blog and portfolio.</p>
         <footer>
             <ul class="buttons vertical">
                 <li><a href="#main" class="button fit scrolly">Explore</a></li>
