--- a/css/style.css
+++ b/css/style.css
@@ -349,13 +349,13 @@
 					background: #e1b89b;
 				}
 
-			.icon.circle.fa-dribbble {
-				background: #da83ae;
+			.icon.circle.fa-linkedin {
+				background: #058bc0;
 				color: white;
 			}
 
-				.icon.circle.fa-dribbble:hover {
-					background: #df93b8;
+				.icon.circle.fa-linkedin:hover {
+					background: #0a9bca;
 				}
 
 		.icon.featured {
