--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 					<ul>
 						<li><a href="/">Welcome</a></li>
             <li><a href="/blog.html">Blog</a></li>
-						<li class="submenu">
+						<!-- <li class="submenu">
 							<a href="">Layouts</a>
 							<ul>
 								<li><a href="/left-sidebar.html">Left Sidebar</a></li>
@@ -22,7 +22,7 @@
 									</ul>
 								</li>
 							</ul>
-						</li>
+						</li> -->
 						<!--<li><a href="#" class="button special">Sign Up</a></li>-->
 					</ul>
 				</nav>
