Add skills to front page

--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -3,11 +3,29 @@
     <div class="container centered">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-            <i class="fa fa-comment-o"></i>
-            <p>{{ site.testimonial.message }}</p>
-            <h4><br/>{{ site.testimonial.author }}</h4>
-            <p>{{ site.testimonial.position }}</p>
+                <h3>SKILLS</h3>
+                <div class="skill">Java</div>
+                <div class="skill">Amazon Web Services</div>
+                <div class="skill">Python</div>
+                <div class="skill">Git and Github</div>
+                <div class="skill">Swift</div>
+                <div class="skill">Xcode</div>
+                <div class="skill">C</div>
+                <div class="skill">C++</div>
+                <div class="skill">Hadoop</div>
+                <div class="skill">Linux</div>
+                <div class="skill">DynamoDB</div>
+                <div class="skill">MapReduce</div>
+                <div class="skill">Unit Testing</div>
+                <div class="skill">REST Principles</div>
+                <div class="skill">Dropwizard</div>
+                <div class="skill">HTML and CSS</div>
+                <div class="skill">iOS Development</div>
+                <div class="skill">IntelliJ</div>
+                <div class="skill">Vim</div>
+                <div class="skill">UML</div>
+                <div class="skill">Software Design</div>
             </div>
-        </div><! --/row -->
-    </div><! --/container -->
-</div><! --/twrap -->
+        </div> <!--/row -->
+    </div> <!--/container -->
+</div> <!--/twrap -->
