--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -331,7 +331,7 @@ a:focus {
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 450px;
+	min-height: 375px;
 	width: 100%;
 
     -webkit-background-size: 100%;
@@ -355,6 +355,22 @@ a:focus {
 	color: white;
 	font-size: 15px;
 	line-height: 30px;
+}
+
+#twrap h3 {
+	margin-bottom: 40px;
+}
+
+.skill {
+	float: left;
+	color: white;
+	font-size: 15px;
+	border-radius: 10px;
+	line-height: 30px;
+	padding: 2px 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	background-color: {{ site.colors.secondary }};
 }
 
 /* clients logo */
