--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -3,7 +3,7 @@
     <div class="container centered">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h3>SKILLS</h3>
+                <h3 class="wtitle">SKILLS</h3>
                 <div class="skill">Java</div>
                 <div class="skill">Amazon Web Services</div>
                 <div class="skill">Python</div>
