--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-{% include wrap.html %}
+<div id="blue"></div>
 
-<div class="container mtb">
+<div class="container mb">
     <div class="row">
         <!-- SINGLE POST -->
         <div class="col-lg-8">
             <!-- Blog Post  -->
+            <h1 class="ctitle">{{ page.title }}</h1>
             <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
 
             {{ content }}
