--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -4,27 +4,33 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h3 class="wtitle">SKILLS</h3>
-                <div class="skill">Java</div>
-                <div class="skill">Amazon Web Services</div>
-                <div class="skill">Python</div>
-                <div class="skill">Git and Github</div>
-                <div class="skill">Swift</div>
-                <div class="skill">Xcode</div>
-                <div class="skill">C</div>
-                <div class="skill">C++</div>
-                <div class="skill">Hadoop</div>
-                <div class="skill">Linux</div>
-                <div class="skill">DynamoDB</div>
-                <div class="skill">MapReduce</div>
-                <div class="skill">Unit Testing</div>
-                <div class="skill">REST Principles</div>
-                <div class="skill">Dropwizard</div>
-                <div class="skill">HTML and CSS</div>
-                <div class="skill">iOS Development</div>
-                <div class="skill">IntelliJ</div>
-                <div class="skill">Vim</div>
-                <div class="skill">UML</div>
-                <div class="skill">Software Design</div>
+                <div class="skill-group">
+                  <div class="skill">Java</div>
+                  <div class="skill">Amazon Web Services</div>
+                  <div class="skill">Python</div>
+                  <div class="skill">Git and Github</div>
+                  <div class="skill">Swift</div>
+                  <div class="skill">Xcode</div>
+                  <div class="skill">Jupyter Notebooks</div>
+                  <div class="skill">Hadoop</div>
+                  <div class="skill">Linux</div>
+                  <div class="skill">DynamoDB</div>
+                  <div class="skill">MapReduce</div>
+                  <div class="skill">Unit Testing</div>
+                  <div class="skill">REST Principles</div>
+                  <div class="skill">Dropwizard</div>
+                  <div class="skill">HTML and CSS</div>
+                  <div class="skill">iOS Development</div>
+                  <div class="skill">IntelliJ</div>
+                  <div class="skill">Vim</div>
+                  <div class="skill">UML</div>
+                  <div class="skill">Software Design</div>
+                  <div class="skill">C</div>
+                  <div class="skill">C++</div>
+                </div>
+                <div class="resume-button">
+                  <p><a href="/assets/misc/resume.pdf" target="_blank" class="btn btn-theme2">View Resume For More</a></p>
+                </div>
             </div>
         </div> <!--/row -->
     </div> <!--/container -->
