--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
         <div class="col-lg-8">
             <!-- Blog Post  -->
             <h1 class="ctitle">{{ page.title }}</h1>
-            <p><csmall>{{ page.date | date: "%b %-d, %Y" }}. | By: {{ page.author }}</csmall></p>
+            <p><csmall>{{ page.date | date: "%b %-d, %Y" }} | By: {{ page.author }}</csmall></p>
 
             {{ content }}
 
