Cleanup, remove unnecessary code

--- a/_includes/companies.html
+++ b/_includes/companies.html
@@ -3,13 +3,13 @@
         <div class="row centered">
             <h3>WHERE I'VE WORKED</h3>
                 <div class="col-md-4">
-                    <img src="{{ "/assets/img/clients/" | prepend: site.baseurl }}{{ "utaustin.png" }}" class="img-responsive">
+                    <img src="{{ "/assets/img/companies/" | prepend: site.baseurl }}{{ "utaustin.png" }}" class="img-responsive">
                 </div>
                 <div class="col-md-4">
-                    <img src="{{ "/assets/img/clients/" | prepend: site.baseurl }}{{ "mainstreethub.png" }}" class="img-responsive">
+                    <img src="{{ "/assets/img/companies/" | prepend: site.baseurl }}{{ "mainstreethub.png" }}" class="img-responsive">
                 </div>
                 <div class="col-md-4">
-                    <img src="{{ "/assets/img/clients/" | prepend: site.baseurl }}{{ "ebay.png" }}">
+                    <img src="{{ "/assets/img/companies/" | prepend: site.baseurl }}{{ "ebay.png" }}">
                 </div>
         </div> <!--/row -->
     </div> <!--/container -->
