--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,5 +1,5 @@
-<div id="twrap">
-    <div id="twrapback"></div>
+<div id="skillwrap">
+    <div id="skillwrapback"></div>
     <div class="container centered">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
@@ -29,7 +29,7 @@
                   <div class="skill">C++</div>
                 </div>
                 <div class="resume-button">
-                  <p><a href="/assets/misc/resume.pdf" target="_blank" class="btn btn-theme2">View Resume For More</a></p>
+                  <p><a href="/assets/misc/resume.pdf" target="_blank" class="btn btn-theme">View Resume For More</a></p>
                 </div>
             </div>
         </div> <!--/row -->
