--- a/_includes/companies.html
+++ b/_includes/companies.html
@@ -11,6 +11,9 @@
                 <div class="col-md-4">
                     <img src="{{ "/assets/img/companies/" | prepend: site.baseurl }}{{ "ebay.png" }}">
                 </div>
+                <div class="col-md-4">
+                    <img src="{{ "/assets/img/companies/" | prepend: site.baseurl }}{{ "microsoft.png" }}">
+                </div>
         </div> <!--/row -->
     </div> <!--/container -->
 </div> <!--/cwrap -->
