Add utterances comment script

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,3 +28,10 @@ layout: default
 
   <a href="#" class="top">Top</a>
 </div>
+
+<script src="https://utteranc.es/client.js"
+        repo="RohanNagar/thunder"
+        issue-term="title"
+        async>
+</script>
+
