Use correct repo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 </div>
 
 <script src="https://utteranc.es/client.js"
-        repo="RohanNagar/thunder"
+        repo="RohanNagar/rohannagar.github.io"
         issue-term="title"
         async>
 </script>
