Remove line breaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,11 +29,11 @@ layout: default
   <a href="#" class="top">Top</a>
 </div>
 
-</br>
-</br>
-<script src="https://utteranc.es/client.js"
-        repo="RohanNagar/rohannagar.github.io"
-        issue-term="title"
-        async>
-</script>
+<div class="comments">
+  <script src="https://utteranc.es/client.js"
+          repo="RohanNagar/rohannagar.github.io"
+          issue-term="title"
+          async>
+  </script>
+</div>
 
