--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -43,7 +43,7 @@
   img + em {
     color: $default-tint;
     display: block;
-    font-family: $sans-serif;
+    font-family: $sans-font;
     font-size: 0.9rem;
     font-style: normal;
     text-align: center;
